Mouse/Up Down - Misc Changes
A number of small (ish) changes - added some new frame rates (3, 4
fps),  fixed some syntax issues in the CSS file,

But mostly: implemented the mouse up/down changes to enable timing for
double clicks and mouse held down.

All seems to be working.

--- a/Resources/News.html
+++ b/Resources/News.html
@@ -1,6 +1,16 @@
 <! coLab General news goes here...>
+<!--
+<br clear=all><p>
+<center><font color=#ffff00 size=+2>Under construction!!</font>
+<br><i>Behavior may be odd for a bit - should be back to normal shortly</i>
+</center><p><hr width=50%><p>
+-->
+
+
+<br clear=all><p>
 
 <img src="/coLab/Resources/Icons/News.png" align=left>
+
 <h3>Click!</h3>
 The new coLab <i><b>Click!</b></i> feature is working!  You
 can now click on the playing graphic 
@@ -8,4 +18,6 @@ and move the audio to that location. Also
 works in fullscreen on some browsers. 
 <p>
 For more info, <a href="/coLab/Resources/News/News-2014.05.26.html" target="_blank">click here</a>.
+<p>
+<b>Note!:</b> Click behavior changed to: <u>click to play, double-click to pause</u>.   
 <p><hr width=50%><p>
