--- a/Resources/News.html
+++ b/Resources/News.html
@@ -1,9 +1,9 @@
 <! coLab General news goes here...>
+<!--
 <br clear=all><p>
 <center><font color=#ffff00 size=+2>Under construction!!</font>
 <br><i>Behavior may be odd for a bit - should be back to normal shortly</i>
 </center><p><hr width=50%><p>
-<!--
 -->
 
 
@@ -20,4 +20,6 @@ works in fullscreen on most (non-Apple) browsers.
 For more info, <a href="/coLab/Resources/News/News-2014.05.26.html" target="_blank">click here</a>.
 <p>
 Click behavior: <i>click to play, double-click to pause</i>.   
+<p><hr width=50%><p>
+<i>Note!</i>  Locator buttons are on their way!
 <p><hr width=50%><p>
