screenshot_width - finally
This fixes #53 - not sure what took me so long - but it also seeems to
address some other minor alignment issues - the 60 second alignment
test suddenly started working after this change.

--- a/Resources/News.html
+++ b/Resources/News.html
@@ -21,5 +21,6 @@ For more info, <a href="/coLab/Resources/News/News-2014.05.26.html" target="_bla
 <p>
 Click behavior: <i>click to play, double-click to pause</i>.   
 <p><hr width=50%><p>
-<i>Note!</i>  Locator buttons are on their way!
+<i>Note!</i>  Locator buttons are here!  They'll be showing up on 
+new pages and more and more existing pages as they're rebuilt.
 <p><hr width=50%><p>
