Location/Time Tagging Works!
This one should do it - not only do the Javascript <span> tags work -
I've added the
capability to add actual URL options to go to either a time or locator,
and those URLs appear on the Comments page as well as in the sent
email.   This fixes #55.

There seems to be a problem yet with the URL's not always working - I
think the problem is the page is not fully loaded - that problem is
noted in #56.

I'm going to close #46 as well - these changes are somewhat related,
but the majority of the work there is done.

I've migrated the cgi-parse.py script (which doesn't do anything like
what it says anymore) now called html_encode.py and also brought
evalfix.py (similar)  and html_encode.py into the Code dir - and
reworked them both work as a stand-alone and a callable python
functions.

--- a/Resources/News.html
+++ b/Resources/News.html
@@ -10,7 +10,27 @@
 <br clear=all><p>
 
 <img src="/coLab/Resources/Icons/News.png" align=left>
+<h3>Time/Location Tagging</h3>
+Time and Loction Tagging is now working.  Simply add a 
+time string (e.g., :21, 1:23.4) or a locator number
+with a '#' (e.g., #1, #10) and it will turn into a 
+link. 
+<p>
+For more info, <a href="/coLab/Resources/News/News-2014.10.26.html" target="_blank">click here</a>.
+<br><font size=-1><i>2014.10.26</i></font><br>
 
+<p><hr width=50%><p>
+<img src="/coLab/Resources/Icons/News.png" align=left>
+<h3>Locator Buttons</h3>
+Locator buttons are here!  They'll be showing up on 
+new pages and more and more existing pages as they're rebuilt.
+<p>
+For more info, <a href="/coLab/Resources/News/News-2014.10.08.html" target="_blank">click here</a>.
+<br><font size=-1><i>2014.10.08</i></font><br>
+
+<p><hr width=50%><p>
+
+<img src="/coLab/Resources/Icons/News.png" align=left>
 <h3>Click!</h3>
 The new coLab <i><b>Click!</b></i> feature is working!  You
 can now click on the playing graphic 
@@ -20,7 +40,5 @@ works in fullscreen on most (non-Apple) browsers.
 For more info, <a href="/coLab/Resources/News/News-2014.05.26.html" target="_blank">click here</a>.
 <p>
 Click behavior: <i>click to play, double-click to pause</i>.   
-<p><hr width=50%><p>
-<i>Note!</i>  Locator buttons are here!  They'll be showing up on 
-new pages and more and more existing pages as they're rebuilt.
+<br><font size=-1><i>2014.05.26</i></font><br>
 <p><hr width=50%><p>
