--- a/Resources/News.html
+++ b/Resources/News.html
@@ -1,17 +1,10 @@
 <! coLab General news goes here...>
-<!--
-<br clear=all><p>
-<center><font color=#ffff00 size=+2>Under construction!!</font>
-<br><i>Behavior may be odd for a bit - should be back to normal shortly</i>
-</center><p><hr width=50%><p>
--->
-
 
 <br clear=all><p>
 
 <img src="/coLab/Resources/Icons/News.png" align=left>
 <h3>Time/Location Tagging</h3>
-Time and Loction Tagging is now working.  Simply add a 
+Time and Location Tagging is now working.  Simply add a 
 time string (e.g., :21, 1:23.4) or a locator number
 with a '#' (e.g., #1, #10) and it will turn into a 
 link. 
