Fixes clicks and keypress
This commit fixes #78 - clicks now do pausing differently if the left
button is held (pause at the play location of the click) or double
clicked (pause at the click location).  They keypress events were fixed
by or’ing with event.which - not sure why that fixed it - since it was
working fine before.

--- a/Resources/Alert.html
+++ b/Resources/Alert.html
@@ -2,6 +2,8 @@
     <br clear=all><p>
     <!center>
     <font color=#ffff00 size=+2>Under<br>construction!!</font>
-    <br><i>Behavior may be odd for a bit - should be back to normal shortly</i>
+    <br><i>The files are being regenerated, full resolution should be
+    available soon.</i>
     <!/center><p><hr width=50%><p>
+    <br><i>Behavior may be odd for a bit - should be back to normal shortly</i>
    -->
