--- a/Resources/News.html
+++ b/Resources/News.html
@@ -1,6 +1,22 @@
 <! coLab General news goes here...>
 <br clear=all><p>
 <img src="/coLab/Resources/Icons/News.png" align=left>
+<h3>Click! - Improved!</h3>
+Clicking is working better now.  When clicking in the video
+area:
+<ul>
+  <li>Intial click &rarr; play from the beginning
+  <li>Single click while playing &rarr; move to that location
+  <li>Click and hold (&gt;1/2 second) &rarr; pause at current play location
+  <li>Double click while playing &rarr; pause at click location
+  <li>Click while paused &rarr; continue from paused location
+</ul>
+In addition, keyboard events ("space" for Play/Pause, etc.) are working again.
+For more info, <a href="/coLab/Resources/News/News-2017.01.26.html" target="_blank">click here</a>.
+<br><font size=-1><i>2017.01.26</i></font><br>
+<img src="/coLab/Resources/Icons/News.png" align=left>
+
+<p><hr width=50%><p>
 <h3>Time/Location Tagging</h3>
 Time and Location Tagging is now working.  Simply add a 
 time string (e.g., :21, 1:23.4) or a locator number
@@ -20,7 +36,7 @@ For more info, <a href="/coLab/Resources/News/News-2014.10.08.html" target="_bla
 <br><font size=-1><i>2014.10.08</i></font><br>
 
 <p><hr width=50%><p>
-
+<!--
 <img src="/coLab/Resources/Icons/News.png" align=left>
 <h3>Click!</h3>
 The new coLab <i><b>Click!</b></i> feature is working!  You
@@ -33,3 +49,4 @@ For more info, <a href="/coLab/Resources/News/News-2014.05.26.html" target="_bla
 Click behavior: <i>click to play, double-click to pause</i>.   
 <br><font size=-1><i>2014.05.26</i></font><br>
 <p><hr width=50%><p>
+-->
